Changes related to library imports and reflections